# Slicer

./: .gitignore  .gitmodules  CMakeLists.txt  FetchVTKExternalModule.cmake  SuperBuild.cmake  pyproject.toml
Base/Logic/: CMakeLists.txt  vtk.module  vtkSlicerApplicationLogic.cxx  vtkSlicerBaseLogicExport.h
Libs/ITKFactoryRegistration/: CMakeLists.txt  itkFactoryRegistration.cxx  itkFactoryRegistration.h  itkFactoryRegistrationInternals.cxx  itkFactoryRegistrationInternals.h  vtk.module
Libs/MRML/CLI/: CMakeLists.txt  vtk.module  vtkMRMLCommandLineModuleNode.h
Libs/MRML/Core/: CMakeLists.txt  vtk.module  vtkCacheManager.cxx  vtkMRMLAbstractViewNode.cxx  vtkMRMLAbstractViewNode.h  vtkMRMLExport.h  vtkMRMLScene.h
Libs/MRML/DisplayableManager/: CMakeLists.txt  vtk.module  vtkMRMLDisplayableManagerExport.h  vtkMRMLModelDisplayableManager.cxx
Libs/MRML/Logic/: CMakeLists.txt  vtk.module  vtkMRMLApplicationLogic.cxx  vtkMRMLLogicExport.h  vtkMRMLSliceLogic.cxx  vtkMRMLViewLogic.cxx
Libs/RemoteIO/: CMakeLists.txt  vtk.module  vtkRemoteIOExport.h
Libs/vtkITK/: CMakeLists.txt  vtk.module  vtkITKArchetypeDiffusionTensorImageReaderFile.cxx  vtkITKExport.h
Libs/vtkSegmentationCore/: CMakeLists.txt  vtk.module  vtkBinaryLabelmapToClosedSurfaceConversionRule.cxx  vtkSegmentationConverter.cxx  vtkSegmentationConverterFactory.cxx  vtkSegmentationConverterFactory.h  vtkSegmentationCoreConfigure.h.in
Libs/vtkTeem/: CMakeLists.txt  vtk.module  vtkTeemConfigure.h.in
Modules/: CMakeLists.txt  howto.md
Modules/CLI/MultiplyScalarVolumes/: CMakeLists.txt
Modules/Loadable/Annotations/: CMakeLists.txt
Modules/Loadable/Annotations/Logic/: CMakeLists.txt  vtk.module  vtkSlicerAnnotationModuleLogic.h
Modules/Loadable/Annotations/MRML/: CMakeLists.txt  vtk.module  vtkMRMLAnnotationControlPointsStorageNode.h  vtkMRMLAnnotationDisplayNode.h  vtkMRMLAnnotationFiducialNode.h  vtkMRMLAnnotationFiducialsStorageNode.h  vtkMRMLAnnotationHierarchyNode.h  vtkMRMLAnnotationLineDisplayNode.h  vtkMRMLAnnotationLinesStorageNode.h  vtkMRMLAnnotationNode.h  vtkMRMLAnnotationPointDisplayNode.h  vtkMRMLAnnotationROINode.h  vtkMRMLAnnotationRulerNode.h  vtkMRMLAnnotationRulerStorageNode.h  vtkMRMLAnnotationSnapshotNode.h  vtkMRMLAnnotationSnapshotStorageNode.h  vtkMRMLAnnotationStorageNode.h  vtkMRMLAnnotationTextDisplayNode.h
Modules/Loadable/Cameras/: CMakeLists.txt
Modules/Loadable/Cameras/Logic/: CMakeLists.txt  vtk.module  vtkSlicerCamerasModuleLogic.h
Modules/Loadable/Colors/: CMakeLists.txt  qSlicerColorsModule.cxx
Modules/Loadable/Colors/Logic/: CMakeLists.txt  vtk.module  vtkSlicerColorLogic.cxx  vtkSlicerColorLogic.h
Modules/Loadable/Colors/MRML/: CMakeLists.txt  vtk.module  vtkMRMLColorLegendDisplayNode.h
Modules/Loadable/Colors/MRMLDM/: CMakeLists.txt  vtk.module  vtkMRMLColorLegendDisplayableManager.h
Modules/Loadable/Colors/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Colors/VTKWidgets/: CMakeLists.txt  vtk.module  vtkSlicerScalarBarActor.h
Modules/Loadable/CropVolume/: CMakeLists.txt
Modules/Loadable/CropVolume/Logic/: CMakeLists.txt  vtk.module  vtkSlicerCropVolumeLogic.cxx  vtkSlicerCropVolumeLogic.h
Modules/Loadable/CropVolume/MRML/: CMakeLists.txt  vtk.module  vtkMRMLCropVolumeParametersNode.h
Modules/Loadable/Data/: CMakeLists.txt
Modules/Loadable/Data/Logic/: CMakeLists.txt  vtk.module  vtkSlicerDataModuleLogic.h
Modules/Loadable/Markups/: CMakeLists.txt  qSlicerMarkupsModule.cxx  qSlicerMarkupsModuleWidget.cxx
Modules/Loadable/Markups/Logic/: CMakeLists.txt  vtk.module  vtkSlicerMarkupsLogic.h
Modules/Loadable/Markups/MRML/: CMakeLists.txt  vtk.module  vtkCurveMeasurementsCalculator.h  vtkMRMLMarkupsAngleNode.h  vtkMRMLMarkupsClosedCurveNode.h  vtkMRMLMarkupsCurveNode.h  vtkMRMLMarkupsDisplayNode.h  vtkMRMLMarkupsFiducialDisplayNode.h  vtkMRMLMarkupsFiducialNode.h  vtkMRMLMarkupsFiducialStorageNode.cxx  vtkMRMLMarkupsFiducialStorageNode.h  vtkMRMLMarkupsJsonElement.h  vtkMRMLMarkupsJsonStorageNode.h  vtkMRMLMarkupsLineNode.h  vtkMRMLMarkupsNode.cxx  vtkMRMLMarkupsNode.h  vtkMRMLMarkupsPlaneDisplayNode.h  vtkMRMLMarkupsPlaneJsonStorageNode.h  vtkMRMLMarkupsPlaneNode.h  vtkMRMLMarkupsROIDisplayNode.h  vtkMRMLMarkupsROIJsonStorageNode.h  vtkMRMLMarkupsROINode.h  vtkMRMLMeasurementAngle.h  vtkMRMLMeasurementArea.h  vtkMRMLMeasurementLength.h  vtkMRMLMeasurementVolume.h  vtkProjectMarkupsCurvePointsFilter.h
Modules/Loadable/Markups/MRMLDM/: CMakeLists.txt  vtk.module  vtkMRMLMarkupsDisplayableManager.h  vtkMRMLMarkupsDisplayableManagerHelper.h
Modules/Loadable/Markups/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Markups/VTKWidgets/: CMakeLists.txt  vtk.module  vtkFastSelectVisiblePoints.h  vtkMarkupsGlyphSource2D.h  vtkSlicerAngleRepresentation2D.h  vtkSlicerAngleRepresentation3D.h  vtkSlicerAngleWidget.h  vtkSlicerCurveRepresentation2D.h  vtkSlicerCurveRepresentation3D.h  vtkSlicerCurveWidget.h  vtkSlicerLineRepresentation2D.h  vtkSlicerLineRepresentation3D.h  vtkSlicerLineWidget.h  vtkSlicerMarkupsInteractionWidget.h  vtkSlicerMarkupsInteractionWidgetRepresentation.h  vtkSlicerMarkupsWidget.h  vtkSlicerMarkupsWidgetRepresentation.h  vtkSlicerPlaneWidget.h  (+10 more)
Modules/Loadable/Models/: CMakeLists.txt
Modules/Loadable/Plots/: CMakeLists.txt
Modules/Loadable/Reformat/: CMakeLists.txt
Modules/Loadable/SceneViews/: CMakeLists.txt
Modules/Loadable/Segmentations/: CMakeLists.txt  qSlicerSegmentationsModule.cxx
Modules/Loadable/Sequences/: CMakeLists.txt
Modules/Loadable/SubjectHierarchy/: CMakeLists.txt
Modules/Loadable/Tables/: CMakeLists.txt
Modules/Loadable/Terminologies/: CMakeLists.txt
Modules/Loadable/Texts/: CMakeLists.txt
Modules/Loadable/Transforms/: CMakeLists.txt  qSlicerTransformsModule.cxx
Modules/Loadable/Units/: CMakeLists.txt
Modules/Loadable/ViewControllers/: CMakeLists.txt
Modules/Loadable/VolumeRendering/: CMakeLists.txt  qSlicerVolumeRenderingModule.cxx
Modules/Loadable/Volumes/: CMakeLists.txt
SlicerLib/: CMakeLists.txt  vtk.module  vtkSlicerLibrary.cxx  vtkSlicerLibrary.h
(+220 files in other folders)
