[build-system]
requires = ["scikit-build-core", "vtk-sdk"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "wheelbuild"

[tool.scikit-build.cmake]
source-dir = "_deps/VTKExternalModule"
verbose = true
args = ["-GNinja"]

[tool.scikit-build.cmake.define]
VTK_MODULE_NAME = "SlicerBaseLogic"
VTK_ADDITIONAL_MODULES_NAME = """
SlicerVolumeRenderingModuleMRMLDisplayableManager;\
SlicerVolumesModuleLogic;\
SlicerSegmentationsModuleLogic;\
SlicerSegmentationsModuleMRMLDisplayableManager\
"""
VTK_MODULE_SOURCE_DIR = "../.."
EXTERNAL_PROJECT_ADDITIONAL_DIR = "C:/dev/slicerlib/SlicerLib/SuperBuild"
Slicer_BUILD_DICOM_SUPPORT = "ON"
CMAKE_INSTALL_LIBDIR = "."
VTK_WHEEL_BUILD = "ON"
VTK_MODULE_SUPERBUILD = "ON"
VTK_MODULE_EXTERNAL_PROJECT_DEPENDENCIES = "teem;LibArchive;RapidJSON;JsonCpp;OpenSSL;curl;ITK;DCMTK"
# ITK_DIR = "C:/itk-build"
# DCMTK_DIR = "C:/dcmtk-build"
# VTK_MODULE_EXTERNAL_PROJECT_CMAKE_CACHE_ARGS = "ITK_DIR;DCMTK_DIR"

[project]
name = "vtk-mrml"
version = "9.3.0"
dependencies = ["vtk==9.3.20240823.dev0"]
