[build-system]
requires = ["scikit-build-core", "vtk-sdk"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "wheelbuild"

[tool.scikit-build.cmake]
source-dir = "_deps/VTKExternalModule"
verbose = true
args = ["-GNinja"]

[tool.scikit-build.cmake.define]
VTK_MODULE_NAME = "SlicerLibrary"
VTK_MODULE_SOURCE_DIR = "../.."
Slicer_BUILD_DICOM_SUPPORT = "ON"
CMAKE_INSTALL_LIBDIR = "."
VTK_WHEEL_BUILD = "ON"
VTK_MODULE_SUPERBUILD = "ON"
VTK_MODULE_EXTERNAL_PROJECT_DEPENDENCIES = "teem;tbb;ParameterSerializer;SlicerExecutionModel;LibArchive;RapidJSON;JsonCpp;OpenSSL;curl;ITK;DCMTK"

[project]
name = "vtk-mrml"
version = "9.3.0"
dependencies = ["vtk==9.3.20240823.dev0"]
